# fastapi-db2

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.sh
alembic/: env.py  script.py.mako
alembic/versions/: a58f46b685c8_initial_migration.py
fastapi_db2/: config.py  database.py  main.py
fastapi_db2/api/v1/: tables.py
fastapi_db2/models/: table.py
fastapi_db2/schemas/: table.py
fastapi_db2/services/: table_service.py
migrations/: env.py
